Car 수정, 주석 추가 (+ 테스트코드