@@ -1,5 +1,6 @@
 package ev_charger.be.car;
 
+import ev_charger.be.car.dto.response.CarResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -8,7 +9,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/cars")
@@ -17,15 +17,11 @@ public class CarController {
 
     private final CarRepository carRepository;
 
-    record CarResponse(long carId, String brand, String model, String trim, int modelYear, float batteryCapacity) {}
-
     @GetMapping
     public ResponseEntity<List<CarResponse>> searchCars(@RequestParam String keyword) {
-        List<CarResponse> results = carRepository
-                .findByBrandContainingIgnoreCaseOrModelContainingIgnoreCase(keyword, keyword)
+        return ResponseEntity.ok(carRepository.findByBrandContainingIgnoreCaseOrModelContainingIgnoreCase(keyword, keyword)
                 .stream()
-                .map(c -> new CarResponse(c.getCarId(), c.getBrand(), c.getModel(), c.getTrim(), c.getModelYear(), c.getBatteryCapacity()))
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(results);
+                .map(CarResponse::from)
+                .toList());
     }
 }
